force-app/main/default/objects/Restaurant__c/fields/Cancelled_Orders__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Orders__c</fullName>
    <label>Cancelled_Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>