force-app/main/default/objects/Restaurant__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Tiruchirappalli</fullName>
            </value>
            <value>
                <fullName>Salem</fullName>
            </value>
            <value>
                <fullName>Ambattur</fullName>
            </value>
            <value>
                <fullName>Tirunelveli</fullName>
            </value>
            <value>
                <fullName>Tiruppur</fullName>
            </value>
            <value>
                <fullName>Avadi</fullName>
            </value>
            <value>
                <fullName>Tiruvottiyur</fullName>
            </value>
            <value>
                <fullName>Thoothukkudi</fullName>
            </value>
            <value>
                <fullName>Nagercoil</fullName>
            </value>
            <value>
                <fullName>Thanjavur</fullName>
            </value>
            <value>
                <fullName>Pallavaram</fullName>
            </value>
            <value>
                <fullName>Dindigul</fullName>
            </value>
            <value>
                <fullName>Vellore</fullName>
            </value>
            <value>
                <fullName>Tambaram</fullName>
            </value>
            <value>
                <fullName>Cuddalore</fullName>
            </value>
            <value>
                <fullName>Kancheepuram</fullName>
            </value>
            <value>
                <fullName>Alandur</fullName>
            </value>
            <value>
                <fullName>Erode</fullName>
            </value>
            <value>
                <fullName>Tiruvannamalai</fullName>
            </value>
            <value>
                <fullName>Kumbakonam</fullName>
            </value>
            <value>
                <fullName>Rajapalayam</fullName>
            </value>
            <value>
                <fullName>Kurichi</fullName>
            </value>
            <value>
                <fullName>Madhavaram</fullName>
            </value>
            <value>
                <fullName>Pudukkottai</fullName>
            </value>
            <value>
                <fullName>Hosur</fullName>
            </value>
            <value>
                <fullName>Ambur</fullName>
            </value>
            <value>
                <fullName>Karaikkudi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>