force-app/main/default/objects/Restaurant__c/fields/Prep_Time_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Prep_Time_Risk_Level__c</fullName>
    <formula>IF(
  Avg_Prep_Time_Min__c &gt;= 45,
  &quot;HIGH&quot;,
  IF(
    Avg_Prep_Time_Min__c &gt;= 30,
    &quot;MEDIUM&quot;,
    &quot;LOW&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prep_Time_Risk_Level</label>
    <type>Text</type>
</CustomField>