force-app/main/default/objects/Restaurant__c/fields/Restaurant_Code__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Code__c</fullName>
    <label>Restaurant_Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>