force-app/main/default/objects/Restaurant__c/fields/Restaurant_Owner__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Restaurant Owner</label>
    <referenceTo>Restaurant_Owners__c</referenceTo>
    <relationshipLabel>Restaurants</relationshipLabel>
    <relationshipName>Restaurants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>