force-app/main/default/objects/Restaurant__c/fields/Restaurant_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Risk_Level__c</fullName>
    <formula>IF(
  Is_Active__c = false,
  &quot;INACTIVE&quot;,
  IF(
    Is_Temporarily_Closed__c,
    &quot;TEMP_CLOSED&quot;,
    &quot;ACTIVE&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restaurant_Risk_Level</label>
    <type>Text</type>
</CustomField>