force-app/main/default/objects/Restaurant__c/validationRules/Prep_time_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Prep_time_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Avg_Prep_Time_Min__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Avg_Prep_Time_Min__c</errorDisplayField>
    <errorMessage>Average preparation time must be greater than zero.</errorMessage>
</ValidationRule>