force-app/main/default/objects/Restaurant__c/listViews/Operations_Approval_Queue_Restaurant.listView-meta.xml
<ListView>
    <fullName>Operations_Approval_Queue_Restaurant</fullName>
    <filterScope>Queue</filterScope>
    <label>Operations Approval Queue</label>
    <queue>Operations_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>